add base homepage
-add function to create home page, it creates a button for each name in setArray
-add function to buttons, when pressed searches its name attribute in a map to get the card pairs.
-add base html
-add base styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Simple Flashcards</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="header">
+        <h1>Page Title</h1>
+    </div>
+    <div id="app">
+        <div class="set-container">           
+        </div>
+    </div>
+    <div class="footer">
+        <span>Ve este projecto en <a href="">Github</a>.</span>
+        <span>© por <a href="https://www.instagram.com/owaruuu/" target="_blank" rel="noopener noreferrer">Josue Marquez</a> 2023.</span>      
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
