--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/6721ab6409.js" crossorigin="anonymous"></script>
     <title>Simple Flashcards</title>
 </head>
 <body>
     <div class="header">
-        <h1>Page Title</h1>
+        <h1>Simple Flashcards</h1>
     </div>
     <div id="app">
-        <div class="set-container">           
+        <div class="sets-container">           
         </div>
     </div>
     <div class="footer">
