--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/6721ab6409.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6721ab6409.js" crossorigin="anonymous"></script>  
     <title>Simple Flashcards</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Simple Flashcards</h1>
-    </div>
-    <div id="app">
-        <div class="sets-container">           
-        </div>
-    </div>
-    <div class="footer">
+    <header class="header">
+        <h1 class="align-self-center">Simple Flashcards</h1>
+    </header>
+    <main id="app">
+        <section class="sets-container">           
+        </section>
+    </main>
+    <footer class="footer">
         <span>Ve este projecto en <a href="">Github</a>.</span>
         <span>© por <a href="https://www.instagram.com/owaruuu/" target="_blank" rel="noopener noreferrer">Josue Marquez</a> 2023.</span>      
-    </div>
-    <script src="index.js"></script>
+    </footer>
+    <!-- <script src="history.js"></script> -->
+    <script type="module" src="index.js"></script>
 </body>
 </html>
