update pagina terminos
-improve css organization a little
-add css for new page elements
-add button to title, it reloads the page
-add CheckUpdates, checks for updates to the lecture texts to update local storage
-add new section with info about lecture and porcetages
-add CalculatePercentageLearned, returns the percentage of terms learned.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="align-self-center">Simple Flashcards</h1>
+        <button id="title-btn">Simple Flashcards</button>
+        <!-- <h1 class="align-self-center"></h1> -->
     </header>
     <main id="app">
         <section class="sets-container">           
