--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer class="footer">
-        <span>Ve este projecto en <a href="">Github</a>.</span>
+        <span>Ve este projecto en <a href="https://github.com/owaruuu/FlashcardsPage" target="_blank">Github</a>.</span>
         <span>© por <a href="https://www.instagram.com/owaruuu/" target="_blank" rel="noopener noreferrer">Josue Marquez</a> 2023.</span>      
     </footer>
     <!-- <script src="history.js"></script> -->
