--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-check form-switch">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Switch Terms and Answers</label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flipTermsSwitch">
+                        <label class="form-check-label" for="flipTermsSwitch">Switch Terms and Answers</label>
+                        <p>Use this option to see if you can recall the term from the other side.</p>
                     </div>
                     <div class="form-check form-switch">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Random order</label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="randomSwitch">
+                        <label class="form-check-label" for="randomSwitch">Random order</label>
                         <p>Sort the cards randomly for better a study experience.</p>
                     </div>
                     <!-- </div>
