finish new data page
-add options menu styles
-add class to options menu paragraph
-update lectures

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" role="switch" id="flipTermsSwitch">
                         <label class="form-check-label" for="flipTermsSwitch">Switch Terms and Answers</label>
-                        <p>Use this option to see if you can recall the term from the other side.</p>
+                        <p class="form-check-p">Use this option to see if you can recall the term from the other side.</p>
                     </div>
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" role="switch" id="randomSwitch">
                         <label class="form-check-label" for="randomSwitch">Random order</label>
-                        <p>Sort the cards randomly for better a study experience.</p>
+                        <p class="form-check-p">Sort the cards randomly for better a study experience.</p>
                     </div>
                     <!-- </div>
                     <div class="modal-footer">
