--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </main>
     <footer class="footer">
         <span>Ve este projecto en <a href="https://github.com/owaruuu/FlashcardsPage" target="_blank">Github</a>.</span>
-        <span>© por <a href="https://www.instagram.com/owaruuu/" target="_blank" rel="noopener noreferrer">Josue Marquez</a> 2023.</span>      
+        <span>© por <a href="https://www.linkedin.com/in/josuemarquez/" target="_blank" rel="noopener noreferrer">Josue Marquez</a> 2023.</span>      
     </footer>
     <!-- <script src="history.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
